arreglos para responsivo telefono

--- a/Styles.css
+++ b/Styles.css
@@ -46,13 +46,22 @@
 
 .header__menu__link{
     font-family: var(--fuente-Play);
+    font-size:1rem;
+    font-weight: 400;
+    text-decoration: none;
+    color: var(--color-secundario);
+}
+
+.header__menu__correo{
+    font-family: var(--fuente-Play);
     font-size:16px;
     font-weight: 400;
     text-decoration: none;
     color: var(--color-secundario);
 }
 
-.header__menu__link:hover{
+.header__menu__link:hover,
+.header__menu__correo:hover{
     color: #00ffc8;
 }
 
@@ -93,7 +102,8 @@
 
 
 .foto_stephany{
-    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
     width: 300px;
 }
 
@@ -397,56 +407,93 @@
 }
 
 
-/*-------Responsivo para tablet------*/
-@media (max-width: 768px) {
-    .header {
-        padding: 2% 5%;
-        flex-direction: column;
-        align-items: center;
-    }
+/*-------Responsivo para teléfonos------*/
+@media (max-width: 480px) {
 
     .header__menu {
-        flex-direction: column;
-        gap: 20px;
+       max-width: 480px
+    }
+    
+
+    .header__menu__link {
+       display: none;
+    }
+
+    .header__menu__correo{
+        display: block;
     }
 
     .presentacion {
         flex-direction: column;
-        padding: 5% 5%;
+        justify-content: center;
+        padding: 5% 3%;
     }
 
-    .presentacion__texto {
-        font-size: 24px;
+    .presentacion__texto__nombre {
+        font-size: 1.5rem;
+        line-height: 1.2;
+    }
+    .  .presentacion__texto__parrafo
+    font-size: 0.5rem;
+    }
+
+    .logos__imagenes{
+        justify-content: center;
+    }
+
+    .clase__foto__stephany{
+        display: flex;
+        justify-content: center;
+        padding: 5px;
     }
 
     .foto_stephany {
-        width: 100%;
-        margin: 20px 0;
+        width: 50%;
+        margin-top: 15px;
     }
 
     #sobre__mi {
         flex-direction: column;
-        padding: 5% 5%;
+        padding: 5% 3%;
     }
 
-    .habilidades__full,
-    .hobbies__full,
-    .formacion__full,
-    .proyectos {
-        flex-direction: column;
+    .sobre__mi__titulo,
+    .titulo,
+    .formacion__titulo,
+    .titulo__hobbies,
+    .proyectos__titulo {
+        font-size: 20px;
     }
 
     .cuadro__item,
     .formacion__elemento {
+        width: 30%;
+    }
+
+    .habilidades__full,
+    .hobbies__full,
+    .proyectos {
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .contacto__campo,
+    .contacto__mensaje {
         width: 100%;
+    }
+
+    .formacion__elemento,
+    .formacion__full{
+        flex-direction: column;
+        width:auto;
     }
 
     .formulario__completo {
         flex-direction: column;
-        gap: 10px;
+        padding: 5% 3%;
     }
 
-    .contacto__campo {
+    .contacto__boton {
         width: 100%;
     }
-}
